--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-Hello Juliet.
+<!doctype html>
+<html lang="en">
+
+<head>
+  <title>Charlie profile</title> 
+  <meta charset="utf-8"> 
+  <script src="manager.js"></script> 
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
+</head>
+
+<body>
+
+<style>
+.nav-pills {
+  font-family: Lobster;
+  font-size: 2em;
+}
+.pageOne {
+  background:url("https://images.unsplash.com/photo-1488867605300-0380106bc701");
+  background-size: cover;
+  height: 800px;
+  margin-top: -10%;
+}
+.block {
+  background-color:black;
+  color: yellow;
+  opacity: 0.5;
+  padding: 10px;
+  width : 70%;
+  margin-right: auto; 
+  margin-left:auto;
+  margin-top: 55px;
+  border-radius: 10px;
+}
+body {
+  color: white;
+}
+h1 {
+  padding: 0;
+  margin-top: 100px;
+  font-size: 5.0em;
+}
+.btn-default {
+  background-color: black;
+  border-color: black;
+  color: #337ab7;
+}
+a {
+  color:blue;
+}
+.pull-right {
+  float: right;
+  background-color:none;
+}
+
+</style>
+
+<head>
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
+</head>
+
+<div class="container container-fluid">
+  <ul class="nav nav-pills">
+    <li class = "pull-left">
+      <a href="#">Charlie</a>
+    </li>
+    <li class = "pull-right">
+      <a href="#">About</a>
+    </li>
+    <li class = "pull-right">
+      <a href="#">Contact me</a>
+    </li>
+  </ul>
+  <div class="pageOne">
+    <div class="block text-center">
+      <div> <a>.</a> </div>
+      <h1>Introduction</h1>
+      <h2>Always learning, keep an open mind.</h2>
+    </div>
+    <div class="btnList">
+      <a class="btn btn-default" href="#">Linkedin</a>
+      <a class="btn btn-default" href="#">GitHub</a>
+      <a class="btn btn-default" href="#">Twitter</a>
+      <a class="btn btn-default" href="#">Blogger</a>
+      <a class="btn btn-default" href="#">Weibo</a>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
