--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
   padding-bottom: 5%;
 }
 .pageTwo {
-  background:url("https://lh3.googleusercontent.com/KNWQopLT-aIy5oyCqcp4jM2m9ZmcY6vm8eTnEJ_WdM_5nFejFgegvYske3My34sBBdSh6tnOFPg2Jc2hI0GUWGFmpkOgr7IREyO4o3Qu_rC7x4YI9VN0S3zZP0QTtvQlFU08YA=w710-h578-no");
+  background:url("https://goo.gl/olijun");
   background-size: cover;
-  height: 400px;
   margin-top : 5%;
   padding-top : 5%;
   padding-bottom: 5%;
+  padding-left: 5%;
 }
 .pageThree {
   
 }
 .pageFour {
-
+  background: url("No, https://goo.gl/o5rxjE");
+  background-size: cover;
+  padding-top : 5%;
+  padding-bottom: 5%;
 }
 
 .paddingTop {
@@ -48,17 +51,14 @@
   margin-left:auto;
   border-radius: 10px;
 }
-body {
-  color: white;
-}
-.pageFour h1 {
-  font-size: 2.0em;
+body h1 {
   color: green;
-  font-family: Lobster;
 }
-.pageFour a1 {
-  font-size: 2.8em;
-  color: green;
+body h2 {
+  color: blue;
+}
+.pageFour h3 a {
+  color: pink;
   font-family: Lobster;
 }
 p {
@@ -76,11 +76,18 @@ p {
   font-size: 1.7em;
 }
 
-.pull-right {
-  float: right;
-  background-color:none;
+.footer {
+  /* float: right; */
+  background-color:black;
+  color:white;
 }
-
+body .btn-circle {
+  border-radius: 50%;
+  border-color: grey;
+  border-width: 2px;
+  border-style: solid;
+  padding: 12px 15px;
+}
 
 </style>
 
@@ -92,7 +99,7 @@ p {
 </head>
 
 <body>
-
+  
 <div id="p1" class="pageOne">
   <ul class="nav nav-pills">
     <li class = "pull-left">
@@ -124,11 +131,13 @@ p {
   
 <div id="p2" class="pageTwo">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-8">
         <h1>Charlie</h1>
-        <p>Software Development Manager</p>
+        <h2>Software Development Manager</h2>
+        <p>Web and mobile development; JavaScript ES5/ES6 ; Node.js ; CSS, HTML5 .
+        </p>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
         <img class="me ximg-responsive" src="https://lh3.googleusercontent.com/i2TfpqbzvNZK6G2snMpyqvAZ42NMZtfcSf3DvySBuFOO4XeuLjXqZPqJJw7rPzhWUKoOIUb_NeYMcK_DOUPIVQDljaAcMo5zPtEUzpPRL9cZJWHFzJS6lBTUcdw3uAJn2YBuKS0Q-JfROyjzxyJQR9IebcbwPV_CIFL74BkzG9GsG-swCdfXq3mC6a26JxRcVsGNkOnJ27hsVU-zuNFB4tBjw2chVu2Uyu13e5UYhL21MMqeRqFmgxb4OkNRUvYMA2hRy-uLdeXy8Pf6g_JWnw1EALX4K71X9V7LcjVofRTbToJgErcrNG6xr-TPVO2-vtVHQbW2ZZBsWzUsq9gfqZSPnn20UvB9eiDwMES9Os7XknHoSIyxc4XEFmcrdMnYoeMxWEaFbtOAu1Qy5BKjFsofYWvLr0F6Tz87hs3lJj73gWYzvBJhpl0V_kIy79W7GRjdtYmlaSxVGbWcw_Z97uZhksQxnqUGgX1UnSYjazdKW55K_-Ia4xF0F_DTLl2zqT0GRUxUG-59YSnmSvs3LnGczD6SaLcnUpo9H51eK9Gjzv-mBiuNMyix94ywznfSx3gQtQvfxKsX2jDY0v6nJe5S11Mfwa9Tp6763ZK82RbcXYDN0irb=w720-h1280-no">
       </div>
     </div>
@@ -137,25 +146,24 @@ p {
 
 <div id="p3" class="pageThree text-center">
   <div class="paddingTop">
-    <h1>Stretch portfolio</h1>
-    <h2>Charlie future project</h2>
+    <h1>Portfolio</h1>
+    <h2>----------</h2>
     <div class="row">
       <div class="col-md-6">
         <p><hr>aa</p>
-        <img class="me img-responsive" src="https://goo.gl/o5rxjE">
+        <img class="me img-responsive" src="https://goo.gl/6wNzHq">
       </div>
       <div class="col-md-6">
-        <hr>
-        <img class="me img-responsive" src="https://goo.gl/o5rxjE">
+        <p><hr>bb</p>
+        <img class="me img-responsive" src="https://goo.gl/6wNzHq">
       </div>
       <div class="col-md-6">
-        <hr>
-        <img class="me img-responsive" src="https://goo.gl/o5rxjE">
+        <p><hr>cc</p>
+        <img class="me img-responsive" src="https://goo.gl/6wNzHq">
       </div>
       <div class="col-md-6">
-        <p><hr>
-        </p>
-        <img class="me img-responsive" src="https://goo.gl/o5rxjE">
+        <p><hr>dd</p>
+        <img class="me img-responsive" src="https://goo.gl/Ax9ZTR">
       </div>
     </div>
     
@@ -164,14 +172,51 @@ p {
 </div>
 
 <div id="p4" class="pageFour text-center">
+
+  <h1>Contact Me</h1>
+  <h1><hr></h1>
+
+  <div class="row">
+    <div class="col-md-6 text-left">
+      <h2>Name and ... </h2>
+      <form>
+        <input type="text" value="Your name">
+        <input type="text" value="Your email">
+      </form>
+    </div>
+    <div class="col-md-6 text-left">
+      <p>Want to get in touch with me? Be it to request more info about myself or my experience, to ask for my resume, tips on how to solve your sudoku, random questions about the universe and the meaning of life, or even if only for some nice Fika here in stunning Toronto... just feel free to drop me a line anytime.</p>
+      <p>.</p>
+      <p>I promise to reply A.S.A.P.</p>
+      <p><a href="mailto:goodgoodwish@gmail.com">GoodGoodWish@gmail.com</a></p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h2>ABOUT THIS PAGE</h2>
+      <p>Made with <i class="fa fa-coffee"></i> and <i class="fa fa-music"></i> by Charlie</p>
+    </div>
+    <div class="col-md-6">
+      <h2>AROUND THE WEB</h2>
+      <h3>
+        <a href="#p1">Charlie - </a>
+        <a href="#p2">About me - </a>
+        <a href="#p3">Portfolio - </a>
+        <a href="mailto:goodgoodwish@gmail.com">GoodGoodWish@gmail.com - </a>
+      </h3>
+
+      <a class="btn btn-default btn-circle" href="https://www.linkedin.com/in/mujiang/">
+        <i class="fa fa-linkedin fa-2x"></i>
+      </a>
+      <a class="btn btn-default btn-circle" href="https://twitter.com/mujiang/" target="blank">
+        <i class="fa fa-twitter fa-2x"></i>
+      </a>
+
+    </div>
+  </div>
   <div class="footer">
-    <a href="#p1"><h1>Charlie a/h1 - </h1></a>
-    <a href="#p1"><h1>Charlie a/h1 - </h1></a>
-    <h1>
-      <a href="#p1">Charlie h1/a - </a>
-      <a href="#p1">Charlie h1/a - </a>
-    </h1>
-    
+    <p>Copyleft 木匠 2015</p>
   </div>
 </div>
 
