Change title, test display: block;

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body .btn-circle {
   padding: 0;
   background-color: #f1f1f1;
   top: 0;
-  width: 100%;
+  width: 120%;
   overflow: hidden;
   position: fixed;
   z-index: 20;
@@ -133,8 +133,8 @@ body .btn-circle {
   border-right: 1px solid #bbb;
 }
 .ul-menu li a {
-  display: block;
-  padding: 18px;
+  //display: block;
+  padding: 28px;
   background-color: #dddddd;
 }
 
@@ -199,7 +199,7 @@ body .btn-circle {
     <div class="row">
       <div class="col-md-8">
         <h1>Charlie</h1>
-        <h2>Software Development Manager</h2>
+        <h2>Full-stack Software Engineer</h2>
         <p>Web and mobile development; JavaScript ES5/ES6 ; Node.js ; CSS, HTML5 .
         </p>
       </div>
