test width: 120% + display: block;

--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@ body .btn-circle {
 .ul-menu li {
   float: right;
   border-right: 1px solid #bbb;
+  width: 120%;
 }
 .ul-menu li a {
-  //display: block;
+  display: block;
   padding: 28px;
   background-color: #dddddd;
 }
